# clint

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  INSTALLATION  LICENSE  README  build.sh  clayparser.cpp  clayparser.h  clintbeta.cpp  clintbeta.h  clintdependence.cpp  clintdependence.h  clintinterface.cpp  clintinterface.h  clintprogram.cpp  clintprogram.h  clintprojection.cpp  clintprojection.h  clintprojectionoverview.cpp  clintprojectionoverview.h  clintscop.cpp  clintscop.h  clintstmt.cpp  clintstmt.h  clintstmtoccurrence.cpp  clintstmtoccurrence.h  clintwindow.cpp  clintwindow.h  dependenceanalyzer.cpp  dependenceanalyzer.h  enumerator.cpp  enumerator.h  macros.h  main.cpp  oslutils.cpp  oslutils.h  projectionview.cpp  projectionview.h  (+38 more)
examples/: diagonal.c  diagonal.scop  localdim.c  localdim.scop  localdimsched.c  localdimsched.scop  maxviz.c  maxviz.scop  next.c  next.scop  onedim.c  onedim.scop  oneiter.c  oneiter.scop  simple.c  simple.scop  statement.c  statement.scop  triangles.c  triangles.scop  unions.c  unions.scop  visu.c  visu.scop
